--- a/app/src/main/res/layout/activity_cover.xml
+++ b/app/src/main/res/layout/activity_cover.xml
@@ -28,7 +28,9 @@
             android:id="@+id/enterEquipmentStateBtn"
             android:layout_width="150dp"
             android:layout_height="200dp"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:background="#00000000"
             android:scaleType="fitXY"
             android:src="@drawable/mascot" />
