Combine client1 and client2

--- a/app/src/main/res/menu/menu_worker_list.xml
+++ b/app/src/main/res/menu/menu_worker_list.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.yge30.client2_repo.WorkerListActivity">
+    tools:context="com.example.bestf.marioclient.M_WorkerListActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
