--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,14 +6,65 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="com.example.yge30.client2_repo.LoginActivity">
-
+    tools:context="com.example.bestf.marioclient.C_LoginActivity">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/bg_line" />
 
+
+
+    <!--<EditText-->
+        <!--android:id="@+id/idText"-->
+        <!--android:layout_width="350dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignLeft="@+id/loginButton"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_alignStart="@+id/loginButton"-->
+        <!--android:layout_marginTop="33dp"-->
+        <!--android:ems="10"-->
+        <!--android:hint="아이디"-->
+        <!--android:inputType="textPersonName"-->
+        <!--tools:layout_editor_absoluteX="16dp"-->
+        <!--tools:layout_editor_absoluteY="25dp" />-->
+
+    <!--<EditText-->
+        <!--android:id="@+id/passwordText"-->
+        <!--android:layout_width="350dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignLeft="@+id/idText"-->
+        <!--android:layout_alignStart="@+id/idText"-->
+        <!--android:layout_below="@+id/idText"-->
+        <!--android:layout_marginTop="14dp"-->
+        <!--android:ems="10"-->
+        <!--android:hint="비밀번호"-->
+        <!--android:inputType="textPassword"-->
+        <!--tools:layout_editor_absoluteX="16dp"-->
+        <!--tools:layout_editor_absoluteY="89dp" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/loginButton"-->
+        <!--android:layout_width="352dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/passwordText"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="19dp"-->
+        <!--android:text="로그인"-->
+        <!--tools:layout_editor_absoluteX="16dp"-->
+        <!--tools:layout_editor_absoluteY="157dp" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/registerButton"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignTop="@+id/loginButton"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginTop="76dp"-->
+        <!--android:text="회원가입"-->
+        <!--android:textAppearance="@style/TextAppearance.AppCompat.Button"-->
+        <!--tools:layout_editor_absoluteX="166dp"-->
+        <!--tools:layout_editor_absoluteY="219dp" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,9 +97,11 @@
                 android:text="@string/textview_id" />
 
             <EditText
-                android:id="@+id/EditText_id"
+                android:id="@+id/idText"
                 android:layout_width="200dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:inputType="textPersonName" />
 
             <TextView
                 android:id="@+id/TextView_pw"
@@ -56,17 +109,35 @@
                 android:text="@string/textview_pw" />
 
             <EditText
-                android:id="@+id/EditText_pw"
+                android:id="@+id/passwordText"
                 android:layout_width="200dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:ems="10"
+                android:inputType="textPassword" />
         </GridLayout>
 
-        <Button
-            android:id="@+id/Button_login"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/button_login" />
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+            <Button
+                android:id="@+id/loginButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/button_login" />
+
+            <Button
+                android:id="@+id/registerButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/button_join" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <ImageView
