--- a/app/src/main/res/layout/activity_worker_list.xml
+++ b/app/src/main/res/layout/activity_worker_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.yge30.client2_repo.WorkerListActivity">
+    tools:context="com.example.bestf.marioclient.M_WorkerListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -56,7 +56,6 @@
                 android:text="@string/tab_text_2" />
 
         </android.support.design.widget.TabLayout>
-
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
