--- a/app/src/main/res/layout/fragment_worker_list.xml
+++ b/app/src/main/res/layout/fragment_worker_list.xml
@@ -1,12 +1,10 @@
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.yge30.client2_repo.WorkerListActivity$PlaceholderFragment">
-
+    tools:context="com.example.bestf.marioclient.M_WorkerListActivity$PlaceholderFragment">
 
     <ListView
         android:id="@+id/listView"
