--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,6 +101,7 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:ems="10"
+                android:text="test"
                 android:inputType="textPersonName" />
 
             <TextView
@@ -113,6 +114,7 @@
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:ems="10"
+                android:text="test"
                 android:inputType="textPassword" />
         </GridLayout>
 
