--- a/app/src/main/res/layout/listview_worker.xml
+++ b/app/src/main/res/layout/listview_worker.xml
@@ -22,20 +22,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tv_isSafe"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:id="@+id/tv_isSafe"-->
+            <!--android:layout_weight="1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content" />-->
 
         <Button
             android:id="@+id/btn_warning"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/warning"
+            android:text=""
             android:textColor="@color/white"
-            android:background="@color/darkGray"
+            android:background="@color/lightGray"
             android:clickable="false"/>
 
     </LinearLayout>
