--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#000000</color>//#FFBF00  #303F9F
     <color name="colorAccent">#FFBF00</color>//FF4081
     <color name="darkGray">#424242</color>
+    <color name="lightGray">#646464</color>
     <color name="white">#ffffff</color>
 </resources>
